force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>A custom table to record all integration payload to and from from Salesforce and external systems for auditing and troubleshooting purpose.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>Int-Log-{00000}</displayFormat>
        <label>Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>