force-app/main/default/objects/Integration_Log__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Request Headers in JSON Format</description>
    <inlineHelpText>Request Headers in JSON Format</inlineHelpText>
    <label>Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>