force-app/main/default/objects/Integration_Log__c/fields/IsError__c.field-meta.xml
<CustomField>
    <fullName>IsError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for any automation provision - In Default it will set to true if Response Code is not 200</description>
    <inlineHelpText>Flag for any automation provision - In Default it will set to true if Response Code is not 200</inlineHelpText>
    <label>Is Error</label>
    <type>Checkbox</type>
</CustomField>