force-app/main/default/objects/Integration_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Request Method</description>
    <inlineHelpText>Request Method</inlineHelpText>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>