force-app/main/default/objects/Integration_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Actual Response Body recieved from external system</description>
    <inlineHelpText>Actual Response Body recieved from external system</inlineHelpText>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>