force-app/main/default/objects/Integration_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Response Status Code</description>
    <inlineHelpText>Response Status Code</inlineHelpText>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>