force-app/main/default/objects/Integration_Log__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <description>Status Message received from External System</description>
    <inlineHelpText>Status Message received from External System</inlineHelpText>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>